--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,18 @@
 :root {
     font-family: "Inter", sans-serif;
 }
+
+.custom-dot-list-style li button {
+    background-color: white !important;
+    opacity: 0.5;
+    width: 10px;
+    height: 10px;
+    border-radius: 9999px;
+    margin: 0 4px;
+    transition: opacity 0.3s ease;
+}
+
+.custom-dot-list-style li.react-multi-carousel-dot--active button {
+    opacity: 1 !important;
+    background-color: white !important;
+}
